# ALS-Algorithm

./: .gitignore  Cargo.toml  LICENSE  README.md  tests_table.docx
.github/workflows/: main.yml
src/: hidden_markov_model.rs  knowledge_tracing_model.rs  lib.rs  main.rs  main_em.rs  main_preprocess.rs
src/data/: preprocess.rs
src/evaluation/: em_result.rs  expectation_maximisation.rs  formatted_record.rs  iteration.rs  mod.rs  preprocess.rs
src/evaluation/em_algorithm/: em_result.rs  expectation_maximisation.rs  formatted_record.rs  iteration.rs  mod.rs
src/evaluation/grid_search/: grid_search.rs  mod.rs
src/evaluation/performance/: auc_roc.rs  load_data.rs  metrics.rs  mod.rs  performance_benchmark.rs  prediction.rs
src/models/: hidden_markov_model.rs  knowledge_tracing_model.rs  mod.rs  models.rs
src/models/python/: bkt.ipynb
