[package]
name = "als-algorithm"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
chrono = "0.4.42"
csv = "1.4.0"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }


[[bin]]
name = "preprocess"
path = "./src/main_preprocess.rs"

[[bin]]
name = "em"
path = "./src/main_em.rs"

[profile.release]
opt-level = 3     # Optimize for speed
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
