[package]
name = "als-algorithm"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
chrono = "0.4.42"
csv = "1.4.0"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }


[[bin]]
name = "preprocess"
path = "./src/bin/main_preprocess.rs"

[[bin]]
name = "em"
path = "./src/bin/main_em.rs"

[[bin]]
name = "grid"
path = "./src/bin/main_grid.rs"

[[bin]]
name = "eval"
path = "./src/bin/main_eval.rs"
[profile.release]
opt-level = 3     
lto = true         
codegen-units = 1   
